--- a/20220809/JWT_study_01/package.json
+++ b/20220809/JWT_study_01/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
@@ -9,12 +8,5 @@
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1"
-  },
-  "name": "20220809",
-  "version": "1.0.0",
-  "main": "app.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
